kotlin/programming-kotlin_code/essence/output/changingval.output
changingval.kts:3:1: error: val cannot be reassigned
pi = 3.14 //ERROR: val cannot be reassigned
^
